[package]
name        = "smallbitset"
version     = "0.3.0"
authors     = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition     = "2018"
description = "This crate provides a series of allocation free sets capable of holding small integer values."
repository  = "https://github.com/xgillard/smallbitset"
readme      = "README.md"
license     = "MIT"
keywords    = ["bitset", "small-values", "allocation-free"]
categories  = ["data-structures", "mathematics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
